# Terminal_Fuzz_Plugin

./: BUILD_INSTRUCTIONS.md  CLAUDE.md  CMakeLists.txt  build_audiohost.sh  build_terminal.sh  build_terminal_fuzz.sh  fast_test.sh  force_rebuild.sh  get_audiohost.sh  knob1.psd  test_main.cpp  watch_and_build.sh
.VSCodeCounter/2025-07-12_13-55-16/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-12_14-08-46/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-12_14-09-55/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-12_14-21-31/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-12_14-45-08/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
backup_octave/: OctaveModule.cpp  OctaveModule.h
design assets/: led.psd  onoffswitch.psd
src/: CMakeCache.txt  Common.h  FrontPanelComponent.cpp  FrontPanelComponent.h  FuzzCircuit.cpp  FuzzCircuit.h  ImageKnobComponent.cpp  ImageKnobComponent.h  Makefile  OutputModule.cpp  OutputModule.h  PhysicsPanelComponent.cpp  PhysicsPanelComponent.h  PluginEditor.cpp  PluginEditor.h  PluginParameters.cpp  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h  SteelBackgroundComponent.cpp  SteelBackgroundComponent.h  TerminalCircuit.cpp  TerminalCircuit.h  TerminalCircuitDiagnostics.h  TerminalCircuitTests.cpp  TerminalCircuit_debug.cpp  VintageKnobComponent.cpp  VintageKnobComponent.h  cmake_install.cmake  juce_vst3_helper
src/TerminalFuzzPlugin_artefacts/JuceLibraryCode/TerminalFuzzPlugin_AU/: Info.plist
src/TerminalFuzzPlugin_artefacts/JuceLibraryCode/TerminalFuzzPlugin_VST3/: Info.plist
src/TerminalFuzzPlugin_artefacts/VST3/Terminal Fuzz.vst3/Contents/Resources/: moduleinfo.json
